# journals-keyword-searching

./: .gitignore  authors.csv  authors_works.csv  authors_works_aggregate.py  authors_works_aggregated.csv  journal_stats.csv  journals.csv  keywords.csv  keywords.py  openalex_authors.py  openalex_search.py  openalex_search_parse_authors.py  openalex_search_parse_authors_works.py  openalex_search_to_csv.py  openalex_search_works_to_csv.py  openalex_stats.py  pdf_to_text.py  pdfs_analyze.py  pyproject.toml  sentiments.csv  sentiments.py  sentiments_collect.py  words.csv  words.py  words_bigrams.csv  words_graph.csv  words_trigrams.csv  works_collect.py
search_results/: S102499938.json  S105812952.json  S117214891.json  S117766065.json  S121755651.json  S122471516.json  S128727557.json  S129275725.json  S132513827.json  S139935717.json  S141456655.json  S141739696.json  S143110675.json  S144836642.json  S149872823.json  S154337186.json  S156235965.json  S157620343.json  S158082692.json  S159327246.json  S160097506.json  S161743634.json  S161895660.json  S165709033.json  S168863142.json  S173252385.json  S175405714.json  S176007004.json  S184094801.json  S187348256.json  S189112142.json  S197191252.json  S199726014.json  S22506700.json  S25593863.json  S29984966.json  S30381306.json  S34110867.json  S38600022.json  S4210222078.json  (+27 more)
sentiment_specific_results/: W101080702.json  W101106618.json  W101880413.json  W1023424045.json  W102979344.json  W103218633.json  W103220653.json  W103325321.json  W1035385643.json  W106179182.json  W109480619.json  W109764602.json  (+5738 more)
(+5102 files in other folders)
